--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         grecaptcha.ready(function() {
             document.querySelector('.step1').classList.remove('hidden');
             grecaptcha.execute('6LdkiRwaAAAAAPQ9VOZDoueQVGdVK_-vP94I_5HC', {action: 'examples/v3scores'}).then(function(token) {
-                document.querySelector('.token').innerHTML = 'fetch(\'/recaptcha-v3-verify.php?action=examples/v3scores&token=\'' + token + '\')';
+                document.querySelector('.token').innerHTML = 'fetch(\'token=\'' + token + '\')';
 
                 fetch('https://www.google.com/recaptcha/api/siteverify').then(function(response) {
                     response.json().then(function(data) {
